# softball-sim

rust/softball-sim/: Cargo.toml  players  softball.app.json
rust/softball-sim/src/: main.rs  softball.rs
rust/softball-sim/src/softball/: app.rs  lineup.rs  simulation.rs
